# brics_3d_jni

./: .gitignore  CMakeLists.txt  README.md
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/src/: AndroidLoggerListener.cpp  AndroidLoggerListener.h  CMakeLists.txt  be_kuleuven_mech_rsg_jni_RsgJNI.cpp  be_kuleuven_mech_rsg_jni_RsgJNI.h
examples/: README.md
examples/AndroidRSGDemo/: AndroidManifest.xml
examples/AndroidRSGDemo/res/layout/: activity_main.xml
examples/AndroidRSGDemo/res/values/: strings.xml
examples/AndroidRSGDemo/src/be/kuleuven/mech/androidrsgdemo/: MainActivity.java
examples/AndroidRSGDemoZMQ/: .classpath  AndroidManifest.xml  README.md
examples/AndroidRSGDemoZMQ/res/layout/: activity_main.xml
examples/AndroidRSGDemoZMQ/src/be/kuleuven/mech/androidrsgdemozmq/: MainActivity.java
examples/JavaRSGTest/: .classpath
examples/JavaRSGTest/src/be/kuleuven/mech/java/: Main.java
examples/JavaRSGTest/src/be/kuleuven/mech/test/: SceneGraphNodesTest.java
java/: README.md
java/RobotSceneGraph/: AndroidManifest.xml
java/RobotSceneGraph/res/values/: strings.xml
java/RobotSceneGraph/src/be/kuleuven/mech/rsg/: Attribute.java  Box.java  HomogeneousMatrix44.java  IOutputPort.java  Id.java  Logger.java  Rsg.java  SceneObject.java  Shape.java  Sphere.java  TimeStamp.java
java/RobotSceneGraph/src/be/kuleuven/mech/rsg/jni/: RsgJNI.java
src/: CMakeLists.txt  be_kuleuven_mech_rsg_jni_RsgJNI.cpp  be_kuleuven_mech_rsg_jni_RsgJNI.h
