CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(brics_3d-jni)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/cmake_modules")
FIND_PACKAGE(BRICS_3D REQUIRED)
FIND_PACKAGE(Eigen REQUIRED)
#FIND_PACKAGE(OpenSceneGraph COMPONENTS osgGA osgUtil osgViewer osgText)
ADD_DEFINITIONS(-DEIGEN3)


#SET(Boost_USE_STATIC_LIBS ON)
#SET(Boost_ADDITIONAL_VERSIONS "1.39" "1.39.0" "1.40" "1.40.0" "1.41" "1.41.0"  "1.42" "1.42.0")
#FIND_PACKAGE(Boost COMPONENTS thread)
#IF (NOT Boost_INCLUDE_DIR)
#  MESSAGE(SEND_ERROR "WARNING: Boost not found")
#ELSE (NOT Boost_INCLUDE_DIR) 
#  MESSAGE(STATUS "SUCCESSFUL: Boost found")
#ENDIF()

# add include directories (-I)
INCLUDE_DIRECTORIES(${BRICS_3D_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})

# add library directories (-L)
LINK_DIRECTORIES(${BRICS_3D_LINK_DIRECTORIES})

ADD_SUBDIRECTORY(src)